package/force-app/main/default/objects/Migration__c/Migration__c.object-meta.xml
<CustomObject>
    <description>Represents a migration that has been applied to an org</description>
    <label>Migration</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Migration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>