package/force-app/main/default/objects/Migration__c/fields/Checksum__c.field-meta.xml
<CustomField>
    <fullName>Checksum__c</fullName>
    <description>A checksum of the migration script&apos;s contents, used to detect changes in scripts after they have been run.</description>
    <label>Checksum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>