package/force-app/main/default/objects/Migration__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A brief description of the migration</description>
    <label>Description</label>
    <length>160</length>
    <type>Text</type>
</CustomField>