package/force-app/main/default/objects/Migration__c/fields/Installed_On__c.field-meta.xml
<CustomField>
    <fullName>Installed_On__c</fullName>
    <description>The date and time at which the migration was run</description>
    <label>Installed On</label>
    <type>DateTime</type>
</CustomField>