package/force-app/main/default/objects/Migration__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <description>The namespace prefix or (if the package doesn&apos;t have a namespace prefix) a unique identifier of the package for which the migration was run. Migration versions are unique within the scope of a package.</description>
    <label>Package</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>