package/force-app/main/default/objects/Migration__c/fields/Script__c.field-meta.xml
<CustomField>
    <fullName>Script__c</fullName>
    <description>The file name of the script that holds the instructions for this migration.</description>
    <label>Script</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>