package/force-app/main/default/objects/Migration__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of migration. Currently only Apex migrations are supported.</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APEX</fullName>
                <default>true</default>
                <label>Apex</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>