package/force-app/main/default/objects/Migration__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>The version number of a migration. Version number is unique within a package&apos;s migrations.</description>
    <label>Version</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>